syntax = "proto3";

package io.iohk.prism.protos;

// While the binary representation is adequate, JavaScript has problems parsing big integers from bytes,
// it is simpler to leave the big integer as string.
message BigInteger {
    string value = 1;
}

message ECPrivateKey {
    BigInteger d = 1;
}

message ECPublicKey {
    BigInteger x = 1;
    BigInteger y = 2;
}

enum Role {
    Issuer = 0;
    Verifier = 1;
}
